kube-manifests/bases/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: frontend-deployment
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
      - image: FRONTEND-APP:latest
        imagePullPolicy: IfNotPresent
        name: frontend-app
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /live
            port: 9000
        readinessProbe:
          httpGet:
            path: /ready
            port: 9000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
