kube-manifests/bases/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{ "ports": { "checks": "frontend-backendconfig" }}'
  labels:
    app: frontend-deployment
  name: frontend-service
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 5000
  - name: checks
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: frontend-deployment
  sessionAffinity: None
  type: LoadBalancer
